--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "pantheion/facade": "dev-master"
+        "pantheion/facade": "dev-master",
+        "pantheion/charon": "dev-master"
     }
 }
